# latex_imports

./: README.md  _packages_to_install.txt  install-packages-preambles.sh  minimal_doc.tex  myapalike.bst  preamble_steve_brochure.tex  preamble_steve_handout.tex  preamble_steve_handout2.tex  preamble_steve_htlatex.tex  preamble_steve_kindle_paper.tex  preamble_steve_lecture_notes.tex  preamble_steve_paper.tex  preamble_steve_paper3.tex  preamble_steve_paper4.tex  preamble_steve_paper5.tex  preamble_steve_paper6.tex  preamble_steve_paper7.tex  preamble_steve_paper_htlatex.tex  preamble_steve_paper_ooxelatex.tex  preamble_steve_report.tex  preamble_steve_report2.tex  preamble_steve_report2_pdftex.tex
preamble-installer/: README.md  packages.yaml  pyproject.toml
preamble-installer/src/preamble_installer/: cli.py
