[project]
name = "preamble-installer"
version = "0.1.0"
description = "Install TeX Live packages required by LaTeX preambles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.1",
  "rich>=13.7.1",
  "typer>=0.12.5",
]

[project.scripts]
preamble-installer = "preamble_installer.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true
